[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Singletons/UI.gd" type="Script" id=1]
[ext_resource path="res://Scenes/UI/VPContainer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/UIRoot.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float blurriness;

void fragment()
{
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, 3.0 * blurriness).rgb * (1.0 - blurriness * 0.4);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/blurriness = null

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("VP")

[node name="UI" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="VP" type="Viewport" parent="."]
size = Vector2( 640, 360 )
transparent_bg = true
handle_input_locally = false
hdr = false
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="UIRoot" parent="VP" instance=ExtResource( 4 )]

[node name="BlurryBG" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VPContainer" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 128, 128 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
texture = SubResource( 3 )

[node name="FadeRect" type="ColorRect" parent="."]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTimer" type="Timer" parent="FadeRect"]
one_shot = true

[node name="Tween" type="Tween" parent="."]
pause_mode = 1

[connection signal="timeout" from="FadeRect/FadeTimer" to="." method="_on_FadeTimer_timeout"]
